<resources>
    <string name="app_name">Sankalp</string>
    <string name="prompt_email">Email (Optional)</string>
    <string name="prompt_userName">Name</string>
    <string name="prompt_userMobile">Mobile No.</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_mobile">Enter valid mobile no.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sankalp_list">SankalpListActivity</string>
    <string name="settings">Settings</string>
    <string name="title_activity_sp_add_sankalp">Add Sankalp</string>
    <string name="title_activity_sp_add_tyag">Add Tyag</string>
    <string name="title_activity_sp_add_niyam">Add Niyam</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="Dashboard">Dashboard</string>
    <string name="UpdateProfile">Update Profile</string>
    <string name="SankalpVidhi">Sankalp Vidhi</string>
    <string name="Feedback">Contact Us</string>
    <string name="sankalpType">Sankalp type</string>
    <string name="selectInterval">Select Interval</string>
    <string name="selectPeriod">Select Period</string>
    <string name="selectDay">Select Day</string>
    <string name="selectMonth">Select Month</string>
    <string name="selectYear">Select Year</string>
    <string name="sankalpCategory">Category</string>
    <string name="sankalpItem">Item</string>
    <string name="sankalpPeriod">Period</string>
    <string name="tyag">Tyag</string>
    <string name="tyagExceptions">Exceptions</string>
    <string name="niyamFrequency">Target</string>
    <string name="niyam">Niyam</string>
    <string name="description">Description</string>
    <string name="descriptionHint">Add any extra note</string>
    <string name="thisDay">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="thisMonth">This month</string>
    <string name="thisYear">This year</string>
    <string name="Lifetime">Lifetime</string>
    <string name="Range">Date Range</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="addSankalp">ADD</string>
    <string name="discardSankalp">Discard</string>
    <string name="deleteSankalp">Delete</string>
    <string name="title_activity_sp_sankalp_list">Sankalp</string>
    <string name="title_activity_user_setup">User Profile</string>
    <string name="total">Total</string>
    <string name="current">Current</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="lifetime_db">Lifetime</string>
    <string name="yearly">Yearly</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="exception_left_label">Used</string>
    <string name="frequency_done_label">Completed</string>
    <string name="Details">Details</string>
    <string name="Share">Share</string>
    <string name="overviewHeader">Overview</string>
    <string name="mostRecentHeader">Most Recent</string>
    <string name="viewAllHeader">View All</string>
    <string name="total2">Total</string>
    <string name="filterList">Filter</string>
    <string name="switchView">Switch</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="searchLabel">Search</string>
    <string name="defaultDescriptionEmptyValue">No description added</string>
    <string name="sankalpSummary">Summary</string>
    <string name="defaultDashboardQuote">Jio Aur Jeene Do</string>
    <string name="quote1">Jio Aur Jeeno Do</string>
    <string name="quote2">Sajjan aur viveki manav, paap pank se darte hai, atah vrato ko dharan karke unka paalan karte hai.</string>
    <string name="EmptyList">No Records Found</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="prompt_city">City (Optional)</string>
    <string name="update">UPDATE</string>
    <string name="calendarViewLabel">Showing this month\'s sankalps</string>
    <string name="Day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="calendarHeader">Month View</string>
    <string name="monthViewLegend">Atleast 1 Sankalp ends on the day.</string>
    <string name="language">Language</string>
    <string name="selectLanguage">Select Language</string>
    <string name="showReminders">Reminders</string>
    <string name="showRemindersEnabled">Enabled</string>
    <string name="showRemindersDisabled">Disabled</string>
    <string name="edit">Edit</string>
    <string name="listSelectedItemLabel">item selected</string>
    <string name="listSelectedItemsLabel">items selected</string>
    <string name="categorySelectPrompt">Touch to select category</string>
    <string name="itemSelectPrompt">Touch to select item</string>
    <string name="periodSelectPrompt">Touch to select period</string>
    <string name="exTarSelectPrompt">Touch to select</string>
    <string name="descriptionAddPrompt">Touch to add description</string>
    <string name="AddDescription">Add Description</string>
    <string name="selectCategoryTitle">Select Category</string>
    <string name="selectItemTitle">Select Item</string>
    <string name="selectCategoryFirst">Please select category first</string>
    <string name="title_activity_sp_material_dashboard">Sankalp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="JaiJinendra">Jai Jinendra</string>
    <string name="addItem">Add New Item</string>
    <string name="addCategory">Add New Category</string>
    <string name="expandAll">Expand All</string>
    <string name="collapseAll">Collapse All</string>
    <string name="notificationPrompy">Set Reminder</string>
    <string name="preferredLanguage">Preferred language</string>
    <string name="categoryName">Category Name</string>
    <string name="itemName">Item Name</string>
    <string name="quoteHeader">Quote of the day</string>
    <string name="multiDeletePrompt">The selected sankalps will be deleted forever. Proceed?</string>
    <string name="singleDeletePrompt">The sankalp will be deleted forever. Proceed?</string>
    <string name="sort">Sort By</string>
    <string name="status">Status</string>
    <string name="endDate">End Date</string>
    <string name="startDate">Start Date</string>
    <string name="creationDate">Creation Date</string>
    <string name="Themes">Themes</string>
    <string name="selectTheme">Select Theme</string>
    <string name="Entertainment">Entertainment</string>
    <string name="Travel">Travel</string>
    <string name="Cosmetic">Cosmetic Products</string>
    <string name="Dharma">Dharma</string>
    <string name="GeneralGreen">General Green</string>
    <string name="GreenVegetables">Green Vegetables</string>
    <string name="GreenLeaves">Green Leaves</string>
    <string name="GreenFruits">Green Fruits</string>
    <string name="GreenAbhakshya">Green Abhakshya</string>
    <string name="Ras">Ras</string>
    <string name="Spices">Spices</string>
    <string name="Anaaj">Anaaj</string>
    <string name="Abhaksya">Abhakshya</string>
    <string name="WHEAT">Wheat</string>
    <string name="RICE">Rice</string>
    <string name="JAU">Jau</string>
    <string name="MATAR">Matar</string>
    <string name="JVAR">Jawar</string>
    <string name="RAJMA">Rajma</string>
    <string name="CORN">Corn</string>
    <string name="BAJRA">Bajra</string>
    <string name="TIL">Til</string>
    <string name="ARHAR_DAAL">Arhar Daal</string>
    <string name="CHAWLA_DAAL">Chawla Daal</string>
    <string name="MOTH_DAAL">Moth Daal</string>
    <string name="MASUR_DAAL">Masur Daal</string>
    <string name="URAD_DAAL">Urad Daal</string>
    <string name="MOONG_DAAL">Moong Daal</string>
    <string name="CHANA_DAAL">Chana Daal</string>
    <string name="SOYABEAN">Soyabean</string>
    <string name="HEENG">Heeng</string>
    <string name="DAANA_METHI">Daana Methi</string>
    <string name="KESAR">Kesar</string>
    <string name="KHAR">Khar</string>
    <string name="JEERA">Jeera</string>
    <string name="DHANIA">Dhania</string>
    <string name="LAL_MIRCH">Lal Mirch</string>
    <string name="AMCHOOR">Amchoor</string>
    <string name="SARSO">Sarso</string>
    <string name="HALDI">Haldi</string>
    <string name="AJWAYAN">Ajwayan</string>
    <string name="LAUNG">Laung</string>
    <string name="SAUNF">Saunf</string>
    <string name="ILAICHI">Ilaichi</string>
    <string name="KALI_MIRCH">Kali Mirch</string>
    <string name="TEJPATTA">Tejpatta</string>
    <string name="DRY_IMLI">Dry Imli</string>
    <string name="KACHRI">Kachri</string>
    <string name="SAUNTH">Saunth</string>
    <string name="GOOND">Goond</string>
    <string name="DALCHINI">Dalchini</string>
    <string name="KETHA">Ketha</string>
    <string name="SUGARCANE">Sugarcane</string>
    <string name="DONGRA">Dongra</string>
    <string name="KACCHA_BADAM">Kaccha Badam</string>
    <string name="JAMOON">Jamoon</string>
    <string name="KHIRNI">Khirni</string>
    <string name="AWLAAN">Awlaan</string>
    <string name="KHURMANI">Khurmani</string>
    <string name="KAMALGATTA">Kamlagatta</string>
    <string name="SINGHADA">Singhada</string>
    <string name="BEL">Bek</string>
    <string name="LEMON">Lemon</string>
    <string name="IMLI">Imli</string>
    <string name="TURAI">Turai</string>
    <string name="PARWAL">Parwal</string>
    <string name="GREEN_CHILLI">Green Chilli</string>
    <string name="LAUKI">Lauki</string>
    <string name="KADDU">Kaddu</string>
    <string name="LASODE">Lasode</string>
    <string name="KARONDA">Karonda</string>
    <string name="TINDSI">Tindsi</string>
    <string name="TINDORI">Tindori</string>
    <string name="TOMATO">Tomato</string>
    <string name="BHINDI">Bhindi</string>
    <string name="SEAM">Seam</string>
    <string name="KARELA">Karela</string>
    <string name="PUDINA">Pudina</string>
    <string name="DHANIYA">Dhaniya</string>
    <string name="MOOLI_PATTA">Mooli Patta</string>
    <string name="PALAK">Palak</string>
    <string name="TULSI">Tulsi</string>
    <string name="PAAN_PATTA">Paan Patta</string>
    <string name="METHI_PATTA">Methi Patta</string>
    <string name="MANGO">Mango</string>
    <string name="BANANA">Banana</string>
    <string name="ORANGE">Orange</string>
    <string name="MAUSAMBI">Mausambi</string>
    <string name="APPLE">Apple</string>
    <string name="POMEGRANATE">Pomegranate</string>
    <string name="CHEEKU">Cheeku</string>
    <string name="AMRUD">Amrud</string>
    <string name="KHARBOOJA">Kharbooja</string>
    <string name="COCONUT">Coconut</string>
    <string name="WATERMELON">Watermelon</string>
    <string name="GRAPES">Grapes</string>
    <string name="SITAPHAL">Sitaphal</string>
    <string name="NASPATI">Naspati</string>
    <string name="ANARAS">Anaras</string>
    <string name="PAPAYA">Papaya</string>
    <string name="PLUM">Plum</string>
    <string name="CHERRY">Cherry</string>
    <string name="LITCHIE">Litchie</string>
    <string name="ANJEER">Anjeer</string>
    <string name="POTATO">Potato</string>
    <string name="ONION">Onion</string>
    <string name="GARLIC">Garlic</string>
    <string name="singleDate">Date</string>
</resources>