<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="pref_language"
        android:title="@string/language"
        android:dialogTitle="@string/selectLanguage"
        android:entries="@array/pref_languages"
        android:entryValues="@array/pref_languages_values"
        android:defaultValue="en_US" />
    <ListPreference
        android:key="pref_themes"
        android:title="@string/Themes"
        android:dialogTitle="@string/selectTheme"
        android:entries="@array/pref_themes"
        android:entryValues="@array/pref_themes"
        android:defaultValue="@string/defaultTheme" />
        />
    <SwitchPreferenceCompat
        android:key="pref_reminders"
        android:title="@string/showReminders"
        android:defaultValue="true"
        />
</PreferenceScreen>