<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/searchLabel"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <!--<item
        android:id="@+id/item_toggleAll"
        android:icon="@drawable/ic_fullscreen_black_24dp"
        android:title="@string/expandAll"
        app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/item_toggleAll"
        android:icon="@drawable/ic_fullscreen_exit_black_24dp"
        android:title="@string/collapseAll"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_add_item"
        android:title="@string/addItem"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_add_category"
        android:title="@string/addCategory"
        app:showAsAction="never" />

</menu>