<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/SpDialogTitleCustom"
        android:text="@string/sankalpType" />

    <View
        style="@style/SpHorizontalDividerMaterial"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="?attr/dialogPreferredPadding"
        android:layout_marginRight="?attr/dialogPreferredPadding" />

    <RadioGroup
        android:id="@+id/rg_sankalpType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rb_st_all"
        android:orientation="horizontal"
        android:paddingLeft="?attr/dialogPreferredPadding">

        <RadioButton
            android:id="@+id/rb_st_all"
            style="@style/SpText"
            android:text="@string/all" />

        <RadioButton
            android:id="@+id/rb_st_tyag"
            style="@style/SpText"
            android:text="@string/tyag" />

        <RadioButton
            android:id="@+id/rb_st_niyam"
            style="@style/SpText"
            android:text="@string/niyam" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/filterDialog_periodView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/SpDialogTitleCustom"
            android:text="@string/sankalpPeriod" />

        <View
            style="@style/SpHorizontalDividerMaterial"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="?attr/dialogPreferredPadding"
            android:layout_marginRight="?attr/dialogPreferredPadding" />

        <RadioGroup
            android:id="@+id/rg_sankalpPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/rb_sp_current"
            android:orientation="vertical"
            android:paddingLeft="?attr/dialogPreferredPadding">

            <RadioButton
                android:id="@+id/rb_sp_current"
                style="@style/SpText"
                android:checked="true"
                android:text="@string/current" />

            <!--<RadioButton
                style="@style/SpText"
                android:id="@+id/rb_sp_lifetime"
                android:text="@string/Lifetime" />-->

            <RadioButton
                android:id="@+id/rb_sp_upcoming"
                style="@style/SpText"
                android:text="@string/upcoming" />

            <RadioButton
                android:id="@+id/rb_sp_all"
                style="@style/SpText"
                android:text="@string/all" />
        </RadioGroup>

    </LinearLayout>


</LinearLayout>