<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RadioGroup
        android:id="@+id/rg_interval"
        android:checkedButton="@+id/rb_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:orientation="vertical">

        <RadioButton
            style="@style/SpText"
            android:id="@+id/rb_day"
            android:text="@string/Day" />

        <RadioButton
            style="@style/SpText"
            android:id="@+id/rb_month"
            android:text="@string/month" />

        <RadioButton
            style="@style/SpText"
            android:id="@+id/rb_year"
            android:text="@string/year" />
    </RadioGroup>

</LinearLayout>