<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/touch_selector"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <!--
                <TextView
                    style="@style/SpLabel"
                    android:text="@string/sankalpSummary" />

                <View style="@style/SpHorizontalDivider" />

                <TextView
                    android:id="@+id/sankalpSummary_v_tv"
                    android:textStyle="italic"
                    style="@style/SpText" />-->

        <TextView
            android:id="@+id/sankalpSummary_v_tv"
            style="@style/SpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textStyle="italic" />

        <View
            style="@style/SpHorizontalDivider"
            android:layout_width="64dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp" />

        <TextView
            style="@style/SpLabel"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/sankalpType" />

        <View style="@style/SpHorizontalDivider" />

        <TextView
            android:id="@+id/sankalpType_v_tv"
            style="@style/SpText" />

        <TextView
            style="@style/SpLabel"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/sankalpCategory" />

        <View style="@style/SpHorizontalDivider" />

        <TextView
            android:id="@+id/category_v_tv"
            style="@style/SpText" />

        <TextView
            style="@style/SpLabel"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/sankalpItem" />

        <View style="@style/SpHorizontalDivider" />

        <TextView
            android:id="@+id/item_v_tv"
            style="@style/SpText" />

        <TextView
            style="@style/SpLabel"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/sankalpPeriod" />

        <View style="@style/SpHorizontalDivider" />

        <TextView
            android:id="@+id/sankalpPeriod_v_tv"
            style="@style/SpText" />


        <TextView
            android:id="@+id/exceptionOrTargetTitle"
            style="@style/SpLabel"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/tyagExceptions" />

        <View style="@style/SpHorizontalDivider" />


        <TextView
            android:id="@+id/sankalpExceptionOrTarget_v_tv"
            style="@style/SpText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exTarCurrent_ll"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/exTarCurrentLabel_tv"
                style="@style/SpText" />
            <EditText
                android:id="@+id/exTarCurrentCount_tv"
                style="@style/SpText"
                android:minWidth="50dp"
                android:background="@drawable/edittextbox"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            style="@style/SpLabel"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/description" />

        <View style="@style/SpHorizontalDivider" />

        <TextView
            android:id="@+id/sankalpDescription_v_tv"
            style="@style/SpText" />
    </LinearLayout>
</ScrollView>
