<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ravijain.sankalp.fragments.SpChartCalendarDashboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="2dp"
                card_view:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/card_quote_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="12dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="12dp"
                        android:text="@string/quoteHeader" />

                    <TextView
                        android:id="@+id/db_quote_tv"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/quote1"
                        android:textColor="?attr/colorAccent"
                         />
                </LinearLayout>
                </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_pieChart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="2dp"

                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/SpCardHeadline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="24dp"
                        android:text="@string/overviewHeader" />

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/db_pieChart"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:paddingBottom="16dp" />

                    <Button
                        android:id="@+id/viewDetails_button"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:text="@string/Details"
                        android:textColor="?attr/colorAccent" />

                </LinearLayout>


            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>

    <include layout="@layout/fab_layout"/>


</RelativeLayout>
